--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "26-Stu_Mongoose-CRUD",
-  "version": "1.0.0",
-  "description": "Reverse engineer developer activity for CRUD methods in Mongoose",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
-    "seed": "node utils/seed"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^8.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.9"
-  }
+    "name": "bcs-social-network-api",
+    "version": "1.0.0",
+    "description": "Reverse engineer developer activity for CRUD methods in Mongoose",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "start": "node index",
+        "dev": "nodemon index",
+        "seed": "node utils/seed",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "mongoose": "^8.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
+    }
 }
