--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "colors": "^1.4.0",
+        "dotenv": "^16.4.5",
         "express": "^4.17.1",
         "mongoose": "^8.0.0"
     },
