--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "colors": "^1.4.0",
+        "date-and-time": "^3.4.1",
         "dotenv": "^16.4.5",
         "express": "^4.17.1",
         "mongoose": "^8.0.0"
